# amr-autogen-travel-agent

./: .env.example  .gitignore  Makefile  README.md  agent.py  config.py  diagnostic.py  diagnostic_entra.py  env.example  gradio_app.py  pyproject.toml
assets/: styles.css
auth/: entra.py
context/: redis_chat_completion_context.py  redis_task_memory.py  seed.json  travel_prompter.py
memory/: redis_chat_completion_context.py  redis_task_memory.py
